# vbasym

./: .gitignore  CMakeLists.txt  Makefile  MyLinkDef.h  PyEvent.h  README.md  WEvent.cxx  analysis2011.C  lumi_calc.cc  stana  stana.cc  stana.h  track.cxx  track.h  vbana.cc  vbana.h  wana.cc
StRoot/StVecBosAna/: AllAsymHContainer.cxx  AllAsymHContainer.h  AnaInfo.cxx  AnaInfo.h  AnaOptions.cxx  AnaOptions.h  AsymCalculator.cxx  AsymCalculator.h  AsymHContainer.cxx  AsymHContainer.h  CalTower.cxx  CalTower.h  EventDisplayHContainer.cxx  EventDisplayHContainer.h  EventDisplayHists.cxx  EventDisplayHists.h  EventHContainer.cxx  EventHContainer.h  Globals.cxx  Globals.h  JetHContainer.cxx  JetHContainer.h  KinemaHContainer.cxx  MCHContainer.cxx  MCHContainer.h  St2011W_EacessMuDst.cxx  St2011W_Ealgo.cxx  St2011W_Ehisto.cxx  St2011W_acessMuDst.cxx  St2011W_algo.cxx  St2011W_histo.cxx  St2011W_trigger.cxx  St2011WlumiMaker.cxx  St2011WlumiMaker.h  St2011Z_histo.cxx  St2011pubMcMaker.cxx  St2011pubMcMaker.h  St2011pubMc_histo.cxx  St2011pubSpinMaker.cxx  St2011pubSpinMaker.h  (+63 more)
StRoot/StVecBosAna/macros/: new_plots.C  plEana.C  plWana.C  plZana.C  rdMuWana2011.C  rdMuWana2012.C
doc/: Doxyfile
macros/: Isolation_plots.C  PtCorrPlot.C  PtCorrPlot_2012.C  Resolution_Plots.C  W_Asymmetry.C  WpWmRatio.C  analysis2011.C  analysis2012.C  analysis_Z0_2011.C  backgrounds2011.C  backgrounds2011_newstyle.C  backgrounds2012_newstyle.C  isolation_NewVsOld.C  loadLibs.C  plotSens.C  plotWPt.C  polarization.C  z_plots.C
macros/curves/: 0304002.Wptcurve.txt  Altarelli.530GeV.txt  UA1.530GeV.txt  ZK_evolution_Wm_asymmetry.txt  ZK_evolution_Wp_asymmetry.txt  ZK_noevo_Wm_asymmetry.txt  ZK_noevo_Wp_asymmetry.txt  histos_pyTunes.root  polarization-by-fill.txt
runlists/: MC_list_QCD_2012  MC_list_QCD_2012_00  MC_list_QCD_2012_00_00  MC_list_QCD_2012_00_01  MC_list_QCD_2012_00_06  MC_list_QCD_2012_00_08  MC_list_QCD_2012_00_12  MC_list_QCD_2012_00_13  MC_list_QCD_2012_00_14  MC_list_QCD_2012_00_17  MC_list_QCD_2012_00_20  MC_list_QCD_2012_00_21  MC_list_QCD_2012_00_25  MC_list_QCD_2012_00_26  MC_list_QCD_2012_00_27  MC_list_QCD_2012_00_29  MC_list_QCD_2012_00_30  MC_list_QCD_2012_00_32  MC_list_QCD_2012_00_33  MC_list_QCD_2012_00_35  MC_list_QCD_2012_00_37  MC_list_QCD_2012_00_38  MC_list_QCD_2012_00_41  MC_list_QCD_2012_00_42  MC_list_QCD_2012_00_44  MC_list_QCD_2012_00_45  MC_list_QCD_2012_00_46  MC_list_QCD_2012_00_47  MC_list_QCD_2012_00_56  MC_list_QCD_2012_00_57  MC_list_QCD_2012_00_58  MC_list_QCD_2012_02  MC_list_QCD_2012_03  MC_list_QCD_2012_04  MC_list_QCD_2012_05  MC_list_QCD_2012_07  MC_list_QCD_2012_09  MC_list_QCD_2012_10  MC_list_QCD_2012_11  MC_list_QCD_2012_15  (+196 more)
scripts/: MCWm2012Templ.xml  MCWp2012Templ.xml  get_file_list.sh  read_xsec.sh  run11_job_template.xml  run11_job_template_mc.xml  run11_job_template_sf.xml  run12_job_template.xml  run13_job_template.xml  run_stana_example.sh  setup.csh  setup.sh  singleMCWanaJobTempl.xml  subMCWm_2012.sh  subMCWp_2012.sh  subSingleMCWana.sh  submit_jobs.sh  submit_jobs_mc.sh  submit_jobs_sf.sh
src/: Makefile  MyLinkDef.h  PyEvent.cxx  PyEvent.h  Track.cxx  Track.h  WEvent.cxx  WEvent.h  events_calc.cc  lumi_calc.cc  stana.cc  stana.h  vbana.cc  wana.cc
utils/: PlotHelper.h  utils.C  utils.h
webview/: .htaccess  PlotHelper.php  bottom.html  config.php  eventdisplay.php  githubhook.php  head.html  index.php  plots.php  utils.php
writeup/: vbasym.tex
writeup/images/: anapow_w_minus.eps  anapow_w_plus.eps
(+17 files in other folders)
